# internal/proto/model/user.pb.go
@@ -1,0 +1,457 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        (unknown)
+// source: model/user.proto
+
+package user
+
+import (
+	_ "github.com/smartmemos/memos/internal/proto/model/common"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type State int32
+
+const (
+	State_STATE_UNSPECIFIED State = 0
+	State_NORMAL            State = 1
+	State_ARCHIVED          State = 2
+)
+
+// Enum value maps for State.
+var (
+	State_name = map[int32]string{
+		0: "STATE_UNSPECIFIED",
+		1: "NORMAL",
+		2: "ARCHIVED",
+	}
+	State_value = map[string]int32{
+		"STATE_UNSPECIFIED": 0,
+		"NORMAL":            1,
+		"ARCHIVED":          2,
+	}
+)
+
+func (x State) Enum() *State {
+	p := new(State)
+	*p = x
+	return p
+}
+
+func (x State) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (State) Descriptor() protoreflect.EnumDescriptor {
+	return file_model_user_proto_enumTypes[0].Descriptor()
+}
+
+func (State) Type() protoreflect.EnumType {
+	return &file_model_user_proto_enumTypes[0]
+}
+
+func (x State) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use State.Descriptor instead.
+func (State) EnumDescriptor() ([]byte, []int) {
+	return file_model_user_proto_rawDescGZIP(), []int{0}
+}
+
+type Direction int32
+
+const (
+	Direction_DIRECTION_UNSPECIFIED Direction = 0
+	Direction_ASC                   Direction = 1
+	Direction_DESC                  Direction = 2
+)
+
+// Enum value maps for Direction.
+var (
+	Direction_name = map[int32]string{
+		0: "DIRECTION_UNSPECIFIED",
+		1: "ASC",
+		2: "DESC",
+	}
+	Direction_value = map[string]int32{
+		"DIRECTION_UNSPECIFIED": 0,
+		"ASC":                   1,
+		"DESC":                  2,
+	}
+)
+
+func (x Direction) Enum() *Direction {
+	p := new(Direction)
+	*p = x
+	return p
+}
+
+func (x Direction) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (Direction) Descriptor() protoreflect.EnumDescriptor {
+	return file_model_user_proto_enumTypes[1].Descriptor()
+}
+
+func (Direction) Type() protoreflect.EnumType {
+	return &file_model_user_proto_enumTypes[1]
+}
+
+func (x Direction) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use Direction.Descriptor instead.
+func (Direction) EnumDescriptor() ([]byte, []int) {
+	return file_model_user_proto_rawDescGZIP(), []int{1}
+}
+
+type User_Role int32
+
+const (
+	User_ROLE_UNSPECIFIED User_Role = 0
+	User_HOST             User_Role = 1
+	User_ADMIN            User_Role = 2
+	User_USER             User_Role = 3
+)
+
+// Enum value maps for User_Role.
+var (
+	User_Role_name = map[int32]string{
+		0: "ROLE_UNSPECIFIED",
+		1: "HOST",
+		2: "ADMIN",
+		3: "USER",
+	}
+	User_Role_value = map[string]int32{
+		"ROLE_UNSPECIFIED": 0,
+		"HOST":             1,
+		"ADMIN":            2,
+		"USER":             3,
+	}
+)
+
+func (x User_Role) Enum() *User_Role {
+	p := new(User_Role)
+	*p = x
+	return p
+}
+
+func (x User_Role) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (User_Role) Descriptor() protoreflect.EnumDescriptor {
+	return file_model_user_proto_enumTypes[2].Descriptor()
+}
+
+func (User_Role) Type() protoreflect.EnumType {
+	return &file_model_user_proto_enumTypes[2]
+}
+
+func (x User_Role) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use User_Role.Descriptor instead.
+func (User_Role) EnumDescriptor() ([]byte, []int) {
+	return file_model_user_proto_rawDescGZIP(), []int{0, 0}
+}
+
+type User struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Username      string                 `protobuf:"bytes,3,opt,name=username,proto3" json:"username,omitempty"`
+	Role          User_Role              `protobuf:"varint,4,opt,name=role,proto3,enum=model.User_Role" json:"role,omitempty"`
+	Nickname      string                 `protobuf:"bytes,5,opt,name=nickname,proto3" json:"nickname,omitempty"`
+	Email         string                 `protobuf:"bytes,6,opt,name=email,proto3" json:"email,omitempty"`
+	AvatarUrl     string                 `protobuf:"bytes,7,opt,name=avatar_url,json=avatarUrl,proto3" json:"avatar_url,omitempty"`
+	Description   string                 `protobuf:"bytes,8,opt,name=description,proto3" json:"description,omitempty"`
+	Password      string                 `protobuf:"bytes,9,opt,name=password,proto3" json:"password,omitempty"`
+	State         State                  `protobuf:"varint,10,opt,name=state,proto3,enum=model.State" json:"state,omitempty"`
+	CreateAt      *timestamppb.Timestamp `protobuf:"bytes,11,opt,name=create_at,json=createAt,proto3" json:"create_at,omitempty"`
+	UpdateAt      *timestamppb.Timestamp `protobuf:"bytes,12,opt,name=update_at,json=updateAt,proto3" json:"update_at,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *User) Reset() {
+	*x = User{}
+	mi := &file_model_user_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *User) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*User) ProtoMessage() {}
+
+func (x *User) ProtoReflect() protoreflect.Message {
+	mi := &file_model_user_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use User.ProtoReflect.Descriptor instead.
+func (*User) Descriptor() ([]byte, []int) {
+	return file_model_user_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *User) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *User) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *User) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *User) GetRole() User_Role {
+	if x != nil {
+		return x.Role
+	}
+	return User_ROLE_UNSPECIFIED
+}
+
+func (x *User) GetNickname() string {
+	if x != nil {
+		return x.Nickname
+	}
+	return ""
+}
+
+func (x *User) GetEmail() string {
+	if x != nil {
+		return x.Email
+	}
+	return ""
+}
+
+func (x *User) GetAvatarUrl() string {
+	if x != nil {
+		return x.AvatarUrl
+	}
+	return ""
+}
+
+func (x *User) GetDescription() string {
+	if x != nil {
+		return x.Description
+	}
+	return ""
+}
+
+func (x *User) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+func (x *User) GetState() State {
+	if x != nil {
+		return x.State
+	}
+	return State_STATE_UNSPECIFIED
+}
+
+func (x *User) GetCreateAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.CreateAt
+	}
+	return nil
+}
+
+func (x *User) GetUpdateAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.UpdateAt
+	}
+	return nil
+}
+
+// Used internally for obfuscating the page token.
+type PageToken struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Limit         int32                  `protobuf:"varint,1,opt,name=limit,proto3" json:"limit,omitempty"`
+	Offset        int32                  `protobuf:"varint,2,opt,name=offset,proto3" json:"offset,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *PageToken) Reset() {
+	*x = PageToken{}
+	mi := &file_model_user_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *PageToken) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*PageToken) ProtoMessage() {}
+
+func (x *PageToken) ProtoReflect() protoreflect.Message {
+	mi := &file_model_user_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use PageToken.ProtoReflect.Descriptor instead.
+func (*PageToken) Descriptor() ([]byte, []int) {
+	return file_model_user_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *PageToken) GetLimit() int32 {
+	if x != nil {
+		return x.Limit
+	}
+	return 0
+}
+
+func (x *PageToken) GetOffset() int32 {
+	if x != nil {
+		return x.Offset
+	}
+	return 0
+}
+
+var File_model_user_proto protoreflect.FileDescriptor
+
+const file_model_user_proto_rawDesc = "" +
+	"\n" +
+	"\x10model/user.proto\x12\x05model\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1fgoogle/api/field_behavior.proto\x1a\x19model/common/common.proto\"\xce\x03\n" +
+	"\x04User\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12\x12\n" +
+	"\x04name\x18\x02 \x01(\tR\x04name\x12\x1a\n" +
+	"\busername\x18\x03 \x01(\tR\busername\x12$\n" +
+	"\x04role\x18\x04 \x01(\x0e2\x10.model.User.RoleR\x04role\x12\x1a\n" +
+	"\bnickname\x18\x05 \x01(\tR\bnickname\x12\x14\n" +
+	"\x05email\x18\x06 \x01(\tR\x05email\x12\x1d\n" +
+	"\n" +
+	"avatar_url\x18\a \x01(\tR\tavatarUrl\x12 \n" +
+	"\vdescription\x18\b \x01(\tR\vdescription\x12\x1a\n" +
+	"\bpassword\x18\t \x01(\tR\bpassword\x12\"\n" +
+	"\x05state\x18\n" +
+	" \x01(\x0e2\f.model.StateR\x05state\x127\n" +
+	"\tcreate_at\x18\v \x01(\v2\x1a.google.protobuf.TimestampR\bcreateAt\x127\n" +
+	"\tupdate_at\x18\f \x01(\v2\x1a.google.protobuf.TimestampR\bupdateAt\";\n" +
+	"\x04Role\x12\x14\n" +
+	"\x10ROLE_UNSPECIFIED\x10\x00\x12\b\n" +
+	"\x04HOST\x10\x01\x12\t\n" +
+	"\x05ADMIN\x10\x02\x12\b\n" +
+	"\x04USER\x10\x03\"9\n" +
+	"\tPageToken\x12\x14\n" +
+	"\x05limit\x18\x01 \x01(\x05R\x05limit\x12\x16\n" +
+	"\x06offset\x18\x02 \x01(\x05R\x06offset*8\n" +
+	"\x05State\x12\x15\n" +
+	"\x11STATE_UNSPECIFIED\x10\x00\x12\n" +
+	"\n" +
+	"\x06NORMAL\x10\x01\x12\f\n" +
+	"\bARCHIVED\x10\x02*9\n" +
+	"\tDirection\x12\x19\n" +
+	"\x15DIRECTION_UNSPECIFIED\x10\x00\x12\a\n" +
+	"\x03ASC\x10\x01\x12\b\n" +
+	"\x04DESC\x10\x02B7Z5github.com/smartmemos/memos/internal/proto/model/userb\x06proto3"
+
+var (
+	file_model_user_proto_rawDescOnce sync.Once
+	file_model_user_proto_rawDescData []byte
+)
+
+func file_model_user_proto_rawDescGZIP() []byte {
+	file_model_user_proto_rawDescOnce.Do(func() {
+		file_model_user_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_model_user_proto_rawDesc), len(file_model_user_proto_rawDesc)))
+	})
+	return file_model_user_proto_rawDescData
+}
+
+var file_model_user_proto_enumTypes = make([]protoimpl.EnumInfo, 3)
+var file_model_user_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_model_user_proto_goTypes = []any{
+	(State)(0),                    // 0: model.State
+	(Direction)(0),                // 1: model.Direction
+	(User_Role)(0),                // 2: model.User.Role
+	(*User)(nil),                  // 3: model.User
+	(*PageToken)(nil),             // 4: model.PageToken
+	(*timestamppb.Timestamp)(nil), // 5: google.protobuf.Timestamp
+}
+var file_model_user_proto_depIdxs = []int32{
+	2, // 0: model.User.role:type_name -> model.User.Role
+	0, // 1: model.User.state:type_name -> model.State
+	5, // 2: model.User.create_at:type_name -> google.protobuf.Timestamp
+	5, // 3: model.User.update_at:type_name -> google.protobuf.Timestamp
+	4, // [4:4] is the sub-list for method output_type
+	4, // [4:4] is the sub-list for method input_type
+	4, // [4:4] is the sub-list for extension type_name
+	4, // [4:4] is the sub-list for extension extendee
+	0, // [0:4] is the sub-list for field type_name
+}
+
+func init() { file_model_user_proto_init() }
+func file_model_user_proto_init() {
+	if File_model_user_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_model_user_proto_rawDesc), len(file_model_user_proto_rawDesc)),
+			NumEnums:      3,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_model_user_proto_goTypes,
+		DependencyIndexes: file_model_user_proto_depIdxs,
+		EnumInfos:         file_model_user_proto_enumTypes,
+		MessageInfos:      file_model_user_proto_msgTypes,
+	}.Build()
+	File_model_user_proto = out.File
+	file_model_user_proto_goTypes = nil
+	file_model_user_proto_depIdxs = nil
+}
